# Two-Brain

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Public/two-brain-client/: package-lock.json  package.json
Public/two-brain-client/public/: index.html
Public/two-brain-client/src/: App.css  App.js
Public/two-brain-client/src/components/: MainAppLayout.css  MainAppLayout.js
alembic/: env.py
alembic/versions/: 201f5e3d349d_initial_schema.py
src/app/: config.py  configuration.py  main.py
src/app/database/: db.py
src/app/database/model/: Note.py  User.py  __init__.py  notesModel.py  userModel.py
src/app/database/schemas/: Note.py  User.py  userSchema.py
src/app/db/: engine.py
src/app/db/model/: notesModel.py  userModel.py
src/app/db/schemas/: noteSchema.py  userSchema.py
src/app/routes/: auth_route.py  dependecies.py  note_route.py  user_routes.py
src/app/security/: cryptography.py  security.py
src/two_brain.egg-info/: PKG-INFO
tests/: conftest.py  database.py  test_db.py  test_jwt.py  test_notes.py  test_routes.py  test_users.py
