[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "two-brain"
version = "0.1.0"
description = "Secondary brain focused on learning and knowledge connections"
readme="README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "aiosqlite",
    "sqlalchemy",
    "uvicorn",
    "pwdlib[argon2]",
    "python-jose>=3.5.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "alembic>=1.18.1",
    "psycopg[binary]>=3.3.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[project.scripts]
serv = "app.main:run"
